--- a/src/styles.less
+++ b/src/styles.less
@@ -7,5 +7,18 @@ body {
   font-family: 'Bitter', serif;
 }
 .container {
-
+  border: 1px solid rgb(210, 210, 210);
+  box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
+  border-radius: 8px;
+  margin: 16px;
+  padding: 16px 8px 12px 16px;
+}
+.friend {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  margin: 4px 0 4px 0;
+}
+button {
+  border-radius: 4px;
 }
