--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,13 @@
   box-sizing: border-box;
 }
 body {
-  background-color: rgb(244, 244, 244);
-  color: rgb(65, 75, 60);
+  background-color: #f4f4f4;
+  color: #414b3c;
   font-family: 'Bitter', serif;
 }
 .container {
-  border: 1px solid rgb(210, 210, 210);
-  box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
+  border: 1px solid #d2d2d2;
+  box-shadow: 0px 1px 6px -2px #807f7f;
   border-radius: 8px;
   margin: 16px;
   padding: 16px 8px 12px 16px;
