--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,3 @@
-* {
-  box-sizing: border-box;
-}
 body {
   background-color: #f4f4f4;
   color: #414b3c;
@@ -10,14 +7,13 @@ body {
   border: 1px solid #d2d2d2;
   box-shadow: 0px 1px 6px -2px #807f7f;
   border-radius: 8px;
-  margin: 16px;
-  padding: 16px 8px 12px 16px;
+  margin-top: 16px;
+  padding: 16px;
 }
 .friend {
   width: 60%;
   display: flex;
   justify-content: space-between;
-  margin: 4px 0 4px 0;
 }
 button {
   border-radius: 4px;
